Text alignment correction

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,11 +1,7 @@
-
-
-
 header.main-header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* align-content: center; */
   justify-content: center;
   height: 400px;
   width: 100%;
@@ -15,34 +11,16 @@ background-image: url("https://www.transparenttextures.com/patterns/shley-tree-2
 
 }
 
-.bounce {
-  margin: 8% 0;
-  -moz-animation: bounce 2s infinite;
-  -webkit-animation: bounce 2s infinite;
-  animation: bounce 2s infinite;
-}
-
-@keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-15px);
-  }
-  90% {
-    transform: translateY(-5px);
-  }
-}
 
 
-@media (min-width : 720px) {
+@media only screen and (min-width: 768px) {
 
   body{
     display:flex;
   }
 
   nav {
-    /* flex-basis:50%; */
+    flex-basis:100%;
     background-color: #03277ce3;
     background-image: none;
   }
@@ -56,11 +34,14 @@ background-image: url("https://www.transparenttextures.com/patterns/shley-tree-2
   .container{
     flex-basis:50%;
     margin-top: 120px;
+    margin-left:40px;
   }
 
   .main-header{
     flex-basis:50%;
     margin-top: 120px;
+    margin-left:40px;
+    margin-bottom: 40px;
   }
 
 }
