--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -2,11 +2,10 @@ nav {
   display: flex;
   color: #FFFFFF;
   align-items: center;
-  width: 100%;
+  width:100%;
   height: 120px;
   position: fixed;
   top: 0;
-  width: 100%;
   overflow: hidden;
   background-color: #ca910da9;
   background-image: url("https://www.transparenttextures.com/patterns/shley-tree-2.png");
@@ -15,7 +14,8 @@ nav {
 .nav-left {
   display: flex;
   font-family: 'Bungee', cursive;
-  padding-left: 1.5em;
+  padding-left: 0.5em;
+  padding-bottom: 1.3em;
   justify-content: flex-start;
   flex-grow:1;
 }
@@ -23,14 +23,39 @@ nav {
 .nav-right {
   display: flex;
   flex-direction: column;
-  padding-right: 1.5em;
+  padding-right: 0.5em;
   flex-grow:1;
   align-items: flex-end
   
+}
+
+@media only screen and (min-width: 768px) {
+.nav-left {padding-left: 1.5em;}
+
+.nav-right {padding-right: 1.5em;}
 }
 
 .fa-angle-double-down {
   font-size: 0.7em;
   color: #ff0000;
   padding-right: 5em;
+}
+
+.bounce {
+  margin: 8% 0;
+  -moz-animation: bounce 2s infinite;
+  -webkit-animation: bounce 2s infinite;
+  animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-15px);
+  }
+  90% {
+    transform: translateY(-5px);
+  }
 }
